@@ -5,7 +5,7 @@
        provider-name="Team XBMC">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
-    <import addon="metadata.common.last.fm" version="1.0"/>
+    <import addon="metadata.common.last.fm" version="1.1.0"/>
     <import addon="metadata.common.allmusic.com" version="1.8.1"/>
     <import addon="metadata.common.htbackdrops.com" version="1.0.7"/>
   </requires>
@@ -21,7 +21,9 @@
     <summary lang="nl">AllMusic-albuminfo</summary>
     <summary lang="pl">Informacje o albumach z AllMusic</summary>
     <summary lang="pt">Scraper de músicas AllMusic</summary>
+    <summary lang="ro">Catalog AllMusic pentru informații albume</summary>
     <summary lang="ru">Информация об альбоме из AllMusic</summary>
+    <summary lang="se">AllMusic albuminformation</summary>
     <summary lang="zh">AllMusic音乐专辑信息</summary>
     <description lang="en">Use AllMusic.com to fill your library metadata information.
 The allmusic website was created in 1995 as a place for music fans to indulge their passion.
@@ -50,10 +52,17 @@ Alle genres en stijlen - of het nu de meest commerciële of de meest obscure zij
     <description lang="pt">Use o AllMusic.com para obter a informação da sua Biblioteca de música. O site allmusic foi criado em 1995 para alimentar a paixão dos fans de música.
 O pessoal da redacção da AMG, em conjunto com centenas de especialistas (todos fanáticos por música à sua maneira), tornaram o allmusic o mais completo site de referência musical do planeta. Continuam dedicados a criar e manter o conhecimento, espírito e conteúdos que fans de música e profissionais da indústria se habituaram a obter da AMG.
 Todos os géneros e estilos de música podem ser encontrados aqui, desde o mais comercial e popular até à música mais rara. Nós revemos e criticamos álbuns e artistas dentro do contexto do seu género - the ópera a rock de garagem, de pop a música country. Isto assegura que fans de qualquer género podem depender de nós para os manter actualizados sobre os seus artistas favoritos bem como de novos sons.</description>
+     <description lang="ro">Folosiți AllMusic.com ca sursă pentru mediateca dumneavoastră.
+Site-ul allmusic a fost creat în 1995 ca un loc unde iubitorii de muzică să se răsfețe. Echipa editorială AMG, împreună cu sute de contribuitori experți (niște fanatici după muzică în felul lor), au făcut allmusic cea mai cuprinzătoare sursă de referințe muzicale de pe planetă. Toți sunt dedicați să creeze și să întrețină conținutul pe care iubitorii de muzică și profesioniștii din industrie îl așteaptă de la AMG.
+Toate genurile și stilurile de muzică sunt incluse aici, începând de la cele mai populare către cele mai obscure. Noi criticăm albumele și artiștii în contextul genurilor proprii. Toți fanii oricărui stil de muzică pot conta pe noi să îi ținem la curent cu artiștii lor favoriți, dar și să le prezentăm noi cântece.</description>
     <description lang="ru">Используйте AllMusic.com для добавления мета-данных в вашу библиотеку.
 Сайт allmusic был создан в 1995 как место для фанатов музыки, где они могли бы удовлетворять свою страсть.
 Редакторский состав AMG, вместе с сотнями участников-экспертов (каждый по-своему фанат музыки), сделали allmusic самым полным источником информации о музыке на планете. Все они посвятили себя созданию и поддержке полезного, и познавательного, контента который любители музыки, и профессионалы индустрии, ожидают от AMG.
 Здесь представлены все стили и жанры музыки, от самых коммерчески популярных до наиболее неизвестных. Мы критикуем альбомы и исполнителей в контексте их собственного жанра - от оперы и гаражного рока до традиционного кантри. Это обеспечивает то, что фанат любого стиля музыки может полагаться на нас в поддержке актуальности своих познаний о любимом исполнителе и также расширять свои знания.</description>
+    <description lang="se">Låt AllMusic.com fylla dina mappar med metadatainformation.
+AllMusic's webbplats skapades 1995 som en plats för musikälskare där de kunde njuta av sin passion.
+AMG's redaktion har tillsammans med hundratals experter och bidragsgivare, alla musikfanatiker på sina egna sätt, gjort AllMusic till den mest omfattande källan inom musikreferens på den här planeten. De är alla kunniga och engagerade med att skapa och upprätthålla ett innehåll på webbplatsen, som musikälskare och branschfolk förväntar sig av AMG.
+Alla genrer och stilar av musik behandlas här, allt från det mest kommersiellt populära till det mest suspekta. De kritiserar album och artister inom ramen för sina egna genrer, allt från opera, garagerock till traditionell countrymusik. Detta säkerställer att alla fans oavsett musikstil kan lita på dem och hålla sig uppdaterade med sina favoritartister och bli introducerade till nya ljud.</description>
     <description lang="zh">从AllMusic.com网站获取音乐资料。
 allmusic网站创建于1995年，它是音乐爱好者的乐园。
 AMG的编辑和许多专业撰稿人（都是音乐狂热分子）共同把allmusic建成世界上最全面的音乐资料库。他们致力于创造和维护音乐爱好者和业内专业人士期望从AMG得到的知识和精神产品。
