@@ -1,8 +1,0 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<strings>
-    <string id="30000">Folosește ordonare DVD</string>
-    <string id="30001">Folosește ordonare absolută (un singur sezon)</string>
-    <string id="30002">Activează Fanart</string>
-    <string id="30003">Preferă afișe</string>
-    <string id="30004">Limbă</string>
-</strings>
